test/conformance/chainsaw/generating-policies/nosync/generate-on-subresource-trigger/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: generate-on-subresource-trigger
spec:
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: create namespace
    try:
    - apply:
        file: namespace.yaml
  - name: run a pod that will be exec'd
    try:
    - command:
        args:
        - run
        - nginx
        - --image=nginx
        - -n
        - test-generate-exec
        entrypoint: kubectl
    - command:
        args:
        - wait
        - --for=condition=Ready
        - pod/nginx
        - -n
        - test-generate-exec
        entrypoint: kubectl
    - command:
        args:
        - exec
        - -n
        - test-generate-exec
        - nginx
        - -it
        - --
        - ls
        entrypoint: kubectl
  - name: check that the configmap is generated
    try:
    - assert:
        file: configmap-assert.yaml
